Update and rename index.md to index.html

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 			
 		}
 	</script>
-	<body style="background-color: gainsboro;">
+	<body>
 		<div class="container">
 			<!--顶部导航栏-->
 			<div class="row bg-white radius-25" id="TopNavBar">
